--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/contracts": "^8.73",
-        "illuminate/support": "^8.77",
+        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
