--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
-        "nunomaduro/collision": "^8.1",
-        "orchestra/testbench": "^9.0",
+        "nunomaduro/collision": "^7.1|^8.1",
+        "orchestra/testbench": "^8.0|^9.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "spatie/laravel-ray": "^1.26"
